syntax = "proto3";

option go_package = "github.com/c12s/star/pkg/api";
package proto;

service StarConfig {
  rpc GetStandaloneConfig(GetReq) returns (StandaloneConfig) {}
  rpc GetConfigGroup(GetReq) returns (ConfigGroup) {}
}

message GetReq {
  string org = 1;
  string name = 2;
  string version = 3;
  string namespace = 4;
}

message Param {
  string key = 1;
  string value = 2;
}

message NamedParamSet {
  string name = 1;
  repeated Param paramSet = 2;
}

message StandaloneConfig {
  string organization = 1;
  string name = 2;
  string version = 3;
  string createdAt = 4;
  repeated Param paramSet = 5;
}

message ConfigGroup {
  string organization = 1;
  string name = 2;
  string version = 3;
  string createdAt = 4;
  repeated NamedParamSet paramSets = 5;
}